[package]
name = "dvd-screensaver"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.2", features = [
    "bevy_sprite",
    "bevy_asset",
    "bevy_window",
    "bevy_winit",
    "png",
], default-features = false }

[profile.release]
lto = true
debug = false
opt-level = 3
codegen-units = 1
panic = "abort"
